2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Feature.cs, Data/Shapefile/Shapefile.cs, Data/IFeatureSource.cs,
	  Data/SimpleFeatureSource.cs: hook up shapefile

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs, Xml/Serialization/MapSerializer.cs, Style.cs: set up
	  theming infrastructure

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs, Drawing/MapDrawer.cs, Xml/Serialization/MapSerializer.cs,
	  Style.cs, Cumberland.csproj: move layer style stuff to separate
	  class
	* Projection/ProjFourWrapper.cs: switch public constants to static
	  readonly

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: cleanup

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: draw image symbol on center point

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs, MapConfigurationException.cs, Drawing/MapDrawer.cs,
	  Xml/Serialization/MapSerializer.cs, Cumberland.csproj: add point
	  image and shape symbol functionality

2008-11-03  Scott Ellington <scott.ellington@gmail.com> 

	* WellKnownText.cs: fixes
	* Data/Shapefile/DBaseIIIFile.cs: fix date loading

2008-11-02  Scott Ellington <scott.ellington@gmail.com> 

	* WellKnownText.cs: add create WKT methods
	* Data/Shapefile/DBaseIIIFile.cs: remove warnings

2008-11-01  Scott Ellington <scott.ellington@gmail.com> 

	* Data/Shapefile/DBaseIIIFile.cs, Cumberland.csproj: add DBase III
	  reader

2008-10-31  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs: add CreateFromData helper
	* Xml/Serialization/MapSerializer.cs, Data/Shapefile/Shapefile.cs,
	  Data/IFileFeatureProvider.cs, Data/IDBFeatureProvider.cs,
	  Data/IFileFeatureSource.cs, Data/IDatabaseFeatureSource.cs,
	  Cumberland.csproj: rename providers to sources

2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Xml/Serialization/MapSerializer.cs: convert relative file paths in
	  map files to absolute
